<resources>
    <string name="app_name">ProyectoJedi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_calculadora">Calculadora</string>
    <string name="title_activity_llamada">LLamar</string>
    <string name="title_activity_modonotificaciones">Modo Notificación</string>
    <string name="title_activity_toast">Toast</string>
    <string name="title_activity_deestado">De Estado</string>
    <string name="action_llamada">LLamar</string>
    <string name="action_modonotificaciones">Modo Notificaciones</string>
    <string name="action_toast">Toast</string>
    <string name="action_deestado">De Estado</string>
    <string name="action_logout">Log out</string>
    <string name="action_info">""</string>
    <string name="action_navegador">"Abrir Navegador"</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_juego">Juego</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_musica">Musica</string>
    <string name="action_ranking">Ranking</string>
</resources>
